--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@m3e/all": "^1.1.2",
+    "dompurify": "^3.3.1",
     "lit-html": "^3.3.2",
+    "marked": "^17.0.1",
     "solit-html": "github:duncsully/solit-html"
   },
   "prettier": {
