--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
   },
   "devDependencies": {
     "typescript": "~5.9.3",
-    "vite": "npm:rolldown-vite@7.2.5"
+    "vite": "npm:rolldown-vite@7.2.5",
+    "vite-plugin-static-copy": "^3.1.5"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
   },
   "dependencies": {
+    "@ionic/core": "^8.7.17",
     "@m3e/all": "^1.1.2",
     "dompurify": "^3.3.1",
     "lit-html": "^3.3.2",
